@@ -14,6 +14,7 @@ import org.lwjgl.util.vector.Vector2f;
 import static org.lazywizard.lazylib.opengl.ColorUtils.glColor;
 import static org.lwjgl.opengl.GL11.*;
 
+// TODO: Update to use DrawQueue
 public class RadarBoxRenderer implements CampaignRenderer
 {
     private static Color RADAR_BG_COLOR, RADAR_FG_COLOR;
